# notebook

./: .clang-format  .gitignore  pyproject.toml
contest/: .clang-format  .clangd  .gitignore  debug.hpp
contest/a/: a.cpp
contest/b/: b.cpp
contest/h/: h.cpp
contest/i/: i.cpp
contest/m/: m.cpp
contest/t/: t.cpp
contest/v/: v.cpp
contest/w/: w.cpp
lib/: .clangd  ;  algebraic_traits.hpp  am_tree.hpp  arbitrary_convolution.hpp  arbitrary_modint.hpp  arbitrary_montgomery_modint.hpp  augmented_link_cut_tree.hpp  augmented_link_cut_tree_base.hpp  augmented_link_cut_tree_commutative.hpp  barrett.hpp  basic_link_cut_tree.hpp  basic_rbst.hpp  basic_splay_tree.hpp  basic_treap.hpp  bcc.hpp  bct.hpp  becc.hpp  becc_incremental.hpp  berlekamp_massey.hpp  binary_lifting.hpp  binary_trie.hpp  binomial.hpp  bipartite.hpp  bipartition.hpp  bit_vector.hpp  bits.hpp  bitset.hpp  blossoms.hpp  ccc.hpp  cccc.hpp  centroids.hpp  cf  compress.hpp  contour_tree_product.hpp  convolution.hpp  convolution_2_64.hpp  convolution_karatsuba.hpp  convolution_naive.hpp  convolution_ntt.hpp  (+190 more)
lib/acted_monoids/: affine_assign.hpp  affine_rev_assign.hpp  max_add.hpp  max_assign.hpp  max_cnt_add.hpp  max_idx_add.hpp  min_add.hpp  min_assign.hpp  min_cnt_add.hpp  mnss_assign.hpp  mxss_assign.hpp  sum_add.hpp  sum_affine.hpp  sum_assign.hpp  summax_add.hpp
lib/beats/: sum_max_add_chmin.hpp  sum_min_add_chmax.hpp  sum_min_max.hpp  sum_min_max_add_chmin_chmax.hpp
lib/monoids/: add.hpp  add_chmax.hpp  add_chmin.hpp  add_chmin_chmax.hpp  add_sz.hpp  (+27 more)
notebook/: __main__.py  expander.py
